added directs for everything and wrote README.md file

--- a/views/about.html
+++ b/views/about.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>About page</h1>
+    <p>This is a template for a Express password hashing webpage.</p>
+    <br />
+    <a href="/">Back home</a>
 </body>
 </html>
