--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,23 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Login</title>
   </head>
   <body>
-    <h1>Register</h1>
-    <form action="/register" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
-      <br />
+    <h1>Login</h1>
+    <form action="/login" method="POST">
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required />
       <br />
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required />
       <br />
-      <button type="submit">Register</button>
+      <button type="submit">Login</button>
     </form>
-    <a href="/login">Already have an account? Log in</a>
+    <a href="/register">Don't have an account? Register</a>
     <br />
     <a href="/">Back home</a>
   </body>
