--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About page</title>
+    <title>User Profile</title>
   </head>
   <body>
-    <h1>About page</h1>
-    <p>This is a template for a Express password hashing webpage.</p>
-    <br />
-    <a href="/">Back home</a>
+    <h1>Welcome, <%= user.username %>!</h1>
+    <p>Email: <%= user.email %></p>
+    <a href="/logout">Logout</a>
   </body>
 </html>
