--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,13 @@
   <body>
     <h1>Welcome to the Landing Page</h1>
     <p>This is the landing page for our Express application.</p>
+
     <nav>
-      <% if (session.userId) { %>
-      <p>Logged in as: <%= session.username %></p>
-      <p>Id: <%= session.userId %></p>
+      <% if (isLoggedIn) { %>
+      <p>Logged in as: <%= session.username %> <% if (isAdmin) { %> (Admin) <% } %></p>
+      <% if (isAdmin) { %>
+        <a href="/admin">Admin Panel</a>
+      <% } %>
       <form action="/logout" method="POST">
         <button type="submit">Logout</button>
       </form>
@@ -20,7 +23,7 @@
       <a href="/register">Register</a>
       <% } %>
     </nav>
-    <br/>
+
     <a href="/about">Learn more about us</a>
   </body>
 </html>
